--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <body>
     <header>
       <h1>CHARLOT HEMI</h1>
-      <p class="standfirst">This is starter kit to build sites based on the needs of academic researchers. This kit is simple by design. It includes color swatches, typography, icons and a spacing system and components. The CSS presentation layer can, and should be, ported to various content creation systems popular at UCLA.</p>
+      <img src href class="HEMI" content="width=device-width, initial-scale=2.0"/
+      
+      <p class="standfirst"> Welcome to my world. You are surely going to have better views on my experiences, knowledges, story and ever growing discovery about personal development and mostly the balanced secret i discovered on the four main forms of intelligence i reckon, is likely to help anybody to achieve success in this. </p>
       
     </header>
     <main>
