--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <h1>CHARLOT HEMI</h1>
       <img src href class="HEMI" content="width=device-width, initial-scale=2.0"/
       
-      <p class="standfirst"> Welcome to my world. You are surely going to have better views on my experiences, knowledges, story and ever growing discovery about personal development and mostly the balanced secret i discovered on the four main forms of intelligence i reckon, is likely to help anybody to achieve success in this. </p>
+      <p class="standfirst"> Welcome to my world. You are surely going to have better views on my experiences, knowledges, story and ever growing discovery about personal development and mostly the balanced secret i discovered on the four main forms of intelligence i reckon, is likely to help anybody willing to achieve success in life.
+        Feel home and go through each point here. You will surely not regret being here. </p>
       
     </header>
     <main>
